--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "webpack serve"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -11,7 +11,8 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "webpack-cli": "^5.1.4"
+  },
+  "main": "out/index.js",
+  "types": "out/index.d.ts"
 }
